adult/logs/create_fluctuations_15091918_710.out
SLURM_JOBID:  15092631
SLURM_ARRAY_TASK_ID:  710
SLURM_ARRAY_JOB_ID:  15091918
  File "./baseline/adv_ratio.py", line 97
    if i % 20 == 0:
    ^
IndentationError: unexpected indent
('baseline', 9, 0.002, 640)


